added methods in class App